--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,8 @@ jobs:
           git pull https://github.com/bbta3-bppt/aerobot.git
       - name: Bangun python environment
         env:
-          APP_NAME: ${{ environments.APP_NAME }}
-          BOT_TOKEN: ${{ environments.BOT_TOKEN }}
+          APP_NAME: ${{ secrets.APP_NAME }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           echo $APP_NAME
           /usr/bin/python3 -V
