--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
           git pull https://github.com/bbta3-bppt/aerobot.git
       - name: Bangun python environment
         env:
-          APP_NAME: ${{ secrets.APP_NAME }}
+          APP_NAME: ${{ env.APP_NAME }}
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           echo $APP_NAME
