minimalisasi env yang tidak digunakan

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   processing_server15:
-    name: Proses Website Server15
+    name: Proses Aerobot Server15
     runs-on: server15
     defaults:
       run:
@@ -18,12 +18,8 @@ jobs:
         run: |
           git version
           git pull https://github.com/bbta3-bppt/aerobot.git
-      - name: Bangun python environment
-        env:
-          APP_NAME: ${{ env.APP_NAME }}
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      - name: Cek versi python
         run: |
-          echo $APP_NAME
           /usr/bin/python3 -V
 
   update_release_draft:
